--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,9 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+//for Kt lint tasks
+apply from: '../ktlint.gradle'
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.0"
